[gd_scene load_steps=2 format=3 uid="uid://r4tlwt0adm3u"]

[ext_resource type="Script" path="res://main_menu/draggable_item.gd" id="1_go6mi"]

[node name="DraggableItem" type="ColorRect" groups=["Draggable"]]
custom_minimum_size = Vector2(0, 25)
offset_right = 204.0
offset_bottom = 25.0
size_flags_horizontal = 3
mouse_filter = 1
color = Color(0.337255, 0.337255, 0.337255, 1)
script = ExtResource("1_go6mi")

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Card Name"
horizontal_alignment = 1

[node name="SelectedRect" type="ColorRect" parent="."]
show_behind_parent = true
anchors_preset = -1
anchor_left = -0.0147059
anchor_top = -0.16
anchor_right = 1.02451
anchor_bottom = 1.16
mouse_filter = 2
color = Color(0.537255, 0.27451, 0.0196078, 1)
metadata/_edit_use_anchors_ = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
